# typhoon

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  config.ini  json.json  rustfmt.toml  test.json
.github/: dependabot.yml
.github/workflows/: build-latest.yml  pr.yml
ast/: Cargo.toml
ast/src/: complex_struct.rs  expresion.rs  function.rs  lib.rs  module.rs  statement.rs  ttype.rs
core/: Cargo.toml
core/src/: codegen.rs  context.rs  lib.rs  program.rs
core/src/llvm_wrapper/: basic_block.rs  builder.rs  context.rs  mod.rs  module.rs
core/src/llvm_wrapper/types/: array_type.rs  function_type.rs  int_type.rs  mod.rs  pointer_type.rs  vector_type.rs  void_type.rs
core/src/llvm_wrapper/values/: function_value.rs  int_value.rs  mod.rs  void_value.rs
core/tests/: codegen_test.rs
grammar_test/: basic.ll  basic.ty  basic_func.ty  func_with_ret_type.ty
llvm_wrapper/: Cargo.toml
llvm_wrapper/src/: build.rs  lib.rs  literal.rs  typ.rs
parser/: Cargo.toml
parser/src/: handler.rs  lib.rs  parser.lalrpop  parser.pest  parser.rs  typhoon.pest
src/: ast.rs  enums.rs  error.rs  lex.rs  lib.rs  main.rs  parser.lalrpop  program.rs
src/ast/: complex_struct.rs  expresion.rs  function.rs  mod.rs  module.rs  statement.rs  ttype.rs
src/llvm_wrapper/: build.rs  literal.rs  mod.rs  typ.rs
tests/: codegen_test.rs
typhoon/: Cargo.toml
typhoon/src/: main.rs
