[package]
name = "typhoon"
version = "0.1.0"
authors = ["Xin Chen <xinszchen@thoughtworks.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
env_logger = "0.5.13"
combine = "3.8.1"
lalrpop-util = {version="0.18.1", features=["lexer"]}
regex = "1.3.7"
llvm-sys = "100.0.1"
structopt = "0.3.14"

[build-dependencies]
lalrpop = {version="0.18.1", features=["lexer"]}

