[package]
name = "ast"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm_wrapper = {path="../llvm_wrapper"}
# todo remove llvm-sys
llvm-sys = "100.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4.11"

