[package]
name = "core"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
ast = {path="../ast"}
parser = {path="../parser"}
llvm-sys = "100.2.0"
log = "0.4.11"
llvm_wrapper = {path="../llvm_wrapper"}
