[package]
name = "core"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
ast = {path="../ast"}
parser = {path="../parser"}
llvm-sys = "120.1.0"
log = "0.4.14"
llvm_wrapper = {path="../llvm_wrapper"}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
