[package]
name = "core"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
ast = {path="../ast"}
parser = {path="../parser"}
log = "0.4.14"
uuid = { version = "1.1.0", features = ["serde", "v4"] }
llvm-sys = "120.2.1"
