[package]
name = "parser"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"
build="build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.5", features = ["lexer"] }
ast = {path="../ast"}


[build-dependencies]
lalrpop = { version = "0.19.5", features = ["lexer"] }
