[package]
name = "parser"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {path="../ast"}
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.1.1"


